<resources>
    <string name="app_name">OrderGo - ROS</string>
    <string name="massage_waiting">Please, Waiting some time...</string>

    <string name="title_placedOrdersItems">Placed Orders Items</string>
    <string name="title_placedItems">Placed Items</string>
    <string name="title_completedOrdersItems">Completed Orders Items</string>
    <string name="title_tables">Tables</string>
    <string name="order_num">O#%s</string>
    <string name="prompt_phone">Your Phone</string>
    <string name="action_sign_in">Send</string>
    <string name="label_no_products">No Found Orders</string>
    <string name="logo">Logo</string>
    <string name="reg_logo">regLogo</string>
    <string name="spinner_type">You have to choose ROS type from dropdown list.</string>
    <string name="invalid_phone">Not valid Phone Number</string>
    <string name="invalid_empty_phone">Enter your phone number</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="setup_ros">Setup ROS</string>
    <string name="action_save">Save</string>
    <string name="table_num">T#%s</string>
    <string name="completed">Completed</string>
    <string name="order">Order</string>
    <string name="searchhint">Search for orders by order number</string>
    <string name="qty">QTY</string>
    <string name="items">Items</string>
    <string name="priority">Priority</string>
    <string name="ordernum">Order#</string>
    <string name="tablenum">Table#</string>
    <string name="total">Total</string>
    <string name="ros_restaurant">ROS (%s)</string>
    <string name="ros_table">Table Number</string>
    <string name="all">All</string>
    <string name="placed">Placed</string>
    <string name="preparing">Preparing</string>
    <string name="select_table">Tables:</string>
    <string name="NoInternet">No Internet Connection</string>
    <string name="message_unknown_error">Sorry, Unknown Error..</string>
    <string name="message_order_status_changed">Order Status changed successfully..</string>
    <string name="message_back_pressed">Press back again to leave the app.</string>
    <string name="takeAway">Takeaway</string>
    <string name="guest_num">G#%s</string>
    <string name="mobile_num">M#%s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_phone_number">1xxxxxxxxx</string>
    <string name="btn_register">Send</string>
    <string name="btn_register_again">Login Again</string>
    <string name="txt_voucher">Your Mobile Number</string>
    <string name="policy">By continuing you agree with Terms of Services and Privacy Policy</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="confirm">Confirm</string>
    <string name="code_take_minutes">Code will send in : </string>
    <string name="resend">Re-Send Code</string>
    <string name="label_second_left">Seconds Left</string>
    <string name="write_answer">write your answer here</string>
    <string name="dismiss_popup">Thank You</string>
    <string name="formatted_time">%02d:%02d</string>
    <string name="enter_code_here">enter code here</string>
    <string name="txt_contact_owner">Please,You have to call admin to activate your account,
        or try to login again with activated account.</string>
    <string name="v_1_0">V 1.0</string>
    <string name="auto_print">Auto Print</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>