<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@color/white"
            app:popupTheme="@style/Widget.AppCompat.Toolbar">

            <ImageView
                android:id="@+id/tv_header_title"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:contentDescription="@string/logo"
                android:src="@drawable/app_ros_logo" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_verifyPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            tools:context=".ui.register_fragment.RegisterFragment">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:padding="@dimen/_2sdp"
                android:text="@string/confirm_code"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fieldVerificationCode">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/code_take_minutes"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_6ssp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txt_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/teal_700"
                    android:textSize="@dimen/_6ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/buttonResend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:text="@string/resend"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_7ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonVerifyPhone"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/buttonsstyle"
                android:gravity="center_horizontal"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="@dimen/_18sdp"
                android:contentDescription="@string/logo"
                android:src="@drawable/smscode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.chaos.view.PinView
                android:id="@+id/fieldVerificationCode"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@color/white"
                android:cursorVisible="true"
                android:inputType="number"
                android:textColorHighlight="@color/orange"
                android:textSize="@dimen/_10ssp"
                android:textStyle="normal"
                app:cursorWidth="@dimen/_1sdp"
                app:hideLineWhenFilled="true"
                app:itemCount="6"
                app:itemHeight="@dimen/_18ssp"
                app:itemRadius="@dimen/_2sdp"
                app:itemSpacing="@dimen/_4sdp"
                app:itemWidth="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:lineColor="@color/medium"
                app:viewType="rectangle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>