<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_marginTop="@dimen/_6sdp"
    tools:context=".ui.placed_items.PlacedItemsFragment"
    android:paddingStart="@dimen/_3sdp"
    android:paddingEnd="@dimen/_3sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_weight="0.6"
            app:cardCornerRadius="@dimen/table_radius"
            app:cardElevation="3dp"
            android:layout_margin="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/txt_qty"
                        style="@style/CardView.Title"
                        android:layout_weight="0.5"
                        android:text="@string/qty" />

                    <TextView
                        android:id="@+id/txt_itemName"
                        style="@style/CardView.Title"
                        android:layout_weight="1.5"
                        android:text="@string/items" />

                    <TextView
                        android:id="@+id/txt_itemServing"
                        style="@style/CardView.Title"
                        android:layout_weight="1"
                        android:text="@string/priority" />

                    <TextView
                        android:id="@+id/txt_orderID"
                        style="@style/CardView.Title"
                        android:layout_weight="1"
                        android:text="@string/ordernum" />

                    <TextView
                        android:id="@+id/txt_tableID"
                        style="@style/CardView.Title"
                        android:layout_weight="1"
                        android:text="@string/tablenum" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/lyt_pay_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_placedItems"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:overScrollMode="always"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:reverseLayout="false"
                        tools:itemCount="5"
                        tools:listitem="@layout/placed_item"
                        android:visibility="visible"/>


                    <TextView
                        android:id="@+id/tv_notOrders"
                        style="@style/CardView.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:layout_margin="@dimen/_3sdp"
                        android:text="Not Found Items."
                        android:visibility="gone" />

                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_weight="0.3"
            app:cardCornerRadius="@dimen/table_radius"
            app:cardElevation="3dp"
            android:layout_margin="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/lbl_qty"
                        style="@style/CardView.Title"
                        android:layout_weight="1"
                        android:text="@string/qty" />

                    <TextView
                        android:id="@+id/lbl_itemName"
                        style="@style/CardView.Title"
                        android:layout_weight="1"
                        android:text="@string/items" />


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_placedItemsTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:overScrollMode="always"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:reverseLayout="false"
                        tools:itemCount="5"
                        tools:listitem="@layout/placed_item_total"
                        android:visibility="visible"/>


                    <TextView
                        android:id="@+id/tv_notTotalOrders"
                        style="@style/CardView.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:layout_margin="@dimen/_3sdp"
                        android:text="Not Items."
                        android:visibility="gone" />

                </RelativeLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            app:cardCornerRadius="@dimen/table_radius"
            app:cardElevation="3dp"
            android:layout_margin="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/lbl_total"
                    style="@style/CardView.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:text="@string/total" />

                <View
                    android:id="@+id/sp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/primary_dark"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/txt_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp"
                    tools:text="11"
                    android:textSize="22sp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_6sdp"
                    android:paddingStart="@dimen/_6sdp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyt_ros_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="0.3"
        android:background="@drawable/timer_rounded_background"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_res"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_resID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:text="@string/ros_restaurant"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toStartOf="@id/img_paid"
            app:layout_constraintStart_toEndOf="@id/img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/img_paid"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/outline_paid_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>